--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
         <head>
                 <script src="https://unpkg.com/vanilla-picker@2"></script>
-                <script src="./_bundles/pdfAnnotate.js" async></script>
+                <script src="bundles/pdfAnnotate.js" async></script>
                 <style>
 .buttonClass {
         margin-top: 5px;
